# mongo2pq

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  sample_config.yaml
mongo2pq/: __init__.py  config.py  exceptions.py  extract_load.py  main.py  mongo.py  schema.py  script.py  types.py
